syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Example.GRPC.API.ApplicationCore.Protos";

package statusInvest;

service StatusInvest {
  rpc ListAction (Empty) returns (ReturnAction);
  rpc ListFII (Empty) returns (ReturnFII);
}

message ReturnAction {
	repeated Action actions = 1;
}

message ReturnFII {
	repeated FII fiis = 1;
}

message Action {
  string id = 1;
  string companyName = 2;
  string ticker = 3;
  int32 companyId = 4;
  google.protobuf.Timestamp lastUpdate = 5;
}

message FII {
  string id = 1;
  string companyName = 2;
  string ticker = 3;
  int32 companyId = 4;
  google.protobuf.Timestamp lastUpdate = 5;
}

message Empty {}